Login using google backend

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
         <div>
             <h1 class="text-center">Shop</h1>
         </div>
+        <a href="login.html">login/signup</a>
         <div class="row" id="product-list">
 
         </div>
     </div>
-    <a href="Add_product.html">Add Product</a>
 </body>
 
 </html>
